# areq

./: .gitignore  Cargo.toml  README.md
.github/: README.md
areq/: Cargo.toml  README.md
areq-body/: Cargo.toml
areq-body/src/: body.rs  body_ext_rtn.rs  body_rtn.rs  compress.rs  lib.rs
areq-h1/: Cargo.toml
areq-h1/src/: body.rs  bytes.rs  client.rs  error.rs  fu.rs  handler.rs  headers.rs  lib.rs  test.rs
areq-h1/tests/: serve.rs
areq-json/: Cargo.toml  README.md
areq-json/src/: body.rs  lib.rs  proto.rs
areq-smol/: Cargo.toml  README.md
areq-smol/src/: addr.rs  connect.rs  ex.rs  handle.rs  lib.rs  once.rs  proto.rs
areq-tokio/: Cargo.toml  README.md
areq-tokio/src/: connect.rs  io.rs  lib.rs
areq/src/: addr.rs  alt.rs  body.rs  client.rs  conn.rs  http1.rs  http2.rs  io.rs  lib.rs  negotiate.rs  or.rs  proto.rs  proto_rtn.rs  tls.rs
certs/: cert.pem  pkey.pem
compress/: Cargo.toml
compress/src/: buffer.rs  decode.rs  lib.rs  parser.rs
compress/test/: lorem.gzip  lorem.txt
examples/fetch/: Cargo.toml
examples/fetch/src/: main.rs
examples/h1-fetch/: Cargo.toml
examples/h1-fetch/src/: main.rs
examples/hello-smol/: Cargo.toml
examples/hello-smol/src/: main.rs
examples/hello-tokio/: Cargo.toml
examples/hello-tokio/src/: main.rs
serve/: Cargo.toml
serve/src/: main.rs  sse.rs
