[workspace]
resolver = "2"
members = [
    "areq",
    "areq-body",
    "areq-h1",
    "examples/fetch",
    "examples/h1-fetch",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["nanoqsh"]
keywords = ["web", "http", "net"]
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/nanoqsh/areq"
rust-version = "1.82"

[workspace.dependencies]
areq = { version = "=0.1.0-alpha", path = "areq" }
areq-body = { version = "=0.1.0-alpha", path = "areq-body" }
areq-h1 = { version = "=0.1.0-alpha", path = "areq-h1" }
async-executor = "1.13"
async-io = "2.3"
async-net = "2.0"
bytes = "1.8"
futures-lite = "2.5"
http = "1.1"
pin-project-lite = "0.2"
url = "2.5"

[workspace.lints.clippy]
large-futures = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"
