[workspace]
resolver = "2"
members = [
    "areq",
    "areq-body",
    "areq-h1",
    "examples/fetch",
    "examples/h1-fetch",
    "serve",
]

[workspace.package]
version = "0.1.0-alpha2"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["nanoqsh"]
keywords = ["web", "http", "net"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
    "web-programming::http-client",
]
repository = "https://github.com/nanoqsh/areq"
rust-version = "1.82"

[workspace.dependencies]
areq = { version = "=0.1.0-alpha", path = "areq" }
areq-body = { version = "=0.1.0-alpha", path = "areq-body" }
areq-h1 = { version = "=0.1.0-alpha", path = "areq-h1" }
async-channel = "2.3"
async-executor = "1.13"
async-net = "2.0"
bytes = "1.9"
futures-concurrency = "7.6"
futures-lite = { version = "2.5", default-features = false, features = ["std"] }
futures-rustls = "0.26"
http = "1.2"
pin-project-lite = "0.2"
rustls-pemfile = "2.2"
url = "2.5"

[workspace.lints.rust]
elided-lifetimes-in-paths = "deny"

[workspace.lints.clippy]
large-futures = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"
