[workspace]
resolver = "2"
members = ["areq", "areq-body", "areq-h1", "areq-smol", "examples/*", "serve"]

[workspace.package]
version = "0.1.0-alpha2"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["nanoqsh"]
keywords = ["web", "http", "net"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
    "web-programming::http-client",
]
repository = "https://github.com/nanoqsh/areq"
rust-version = "1.85"

[workspace.dependencies]
areq = { version = "=0.1.0-alpha2", path = "areq" }
areq-body = { version = "=0.1.0-alpha2", path = "areq-body" }
areq-h1 = { version = "=0.1.0-alpha2", path = "areq-h1" }
areq-smol = { version = "=0.1.0-alpha2", path = "areq-smol" }
async-channel = "2.3"
async-executor = "1.13"
async-net = "2.0"
axum = { version = "0.8", default-features = false }
bytes = "1.9"
futures-concurrency = "7.6"
futures-lite = { version = "2.5", default-features = false }
futures-rustls = "0.26"
h2 = "0.4"
http = "1.2"
httparse = "1.9"
http-body-util = "0.1"
hyper = "1"
pin-project-lite = "0.2"
rustls-pemfile = "2.2"
serde_json = "1.0"
smol = "2.0"
smol-hyper = "0.1"
tokio = "1"
tower = "0.5"
url = "2.5"

[workspace.lints.rust]
elided-lifetimes-in-paths = "deny"

[workspace.lints.clippy]
large-futures = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.ci]
inherits = "dev"
opt-level = 1

[profile.ci.package."*"]
opt-level = 1

[profile.ci.build-override]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
