[package]
name = "areq-body"
description = "HTTP body types and traits as part of areq crate"
documentation = "https://docs.rs/areq-body"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
futures-lite = { workspace = true, features = ["std"] }
pin-project-lite.workspace = true

[features]
rtn = []

[lints]
workspace = true
