[package]
name = "areq-h1"
description = "An implementation of HTTP/1.1 as part of areq crate"
documentation = "https://docs.rs/areq-h1"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
areq-body.workspace = true
async-channel = "2.3"
bytes.workspace = true
futures-lite.workspace = true
http.workspace = true
httparse = "1.9"
pin-project-lite.workspace = true

[dev-dependencies]
async-executor.workspace = true
async-io.workspace = true
async-net.workspace = true
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
serde_json = "1.0"
smol-hyper = "0.1.1"

[lints]
workspace = true
