[package]
name = "areq-h1"
description = "An implementation of HTTP/1.1 as part of areq crate"
documentation = "https://docs.rs/areq-h1"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
areq-body.workspace = true
async-channel.workspace = true
bytes.workspace = true
futures-lite.workspace = true
http.workspace = true
httparse.workspace = true

[dev-dependencies]
async-executor.workspace = true
async-net.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
http-body-util.workspace = true
serde_json.workspace = true
smol-hyper.workspace = true

[lints]
workspace = true
