[package]
name = "areq-smol"
description = "Async HTTP requests for smol runtime"
documentation = "https://docs.rs/areq-smol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
http1 = ["areq/http1"]
http2 = ["areq/http2"]
tls = ["areq/tls"]
rtn = ["areq/rtn"]

[dependencies]
areq.workspace = true
async-net.workspace = true
futures-lite = { workspace = true, features = ["std"] }
url.workspace = true

[lints]
workspace = true
