[package]
name = "areq-smol"
description = "Async HTTP requests for smol runtime"
documentation = "https://docs.rs/areq-smol"
readme = "areq-smol/README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
http1 = ["areq/http1"]
http2 = ["areq/http2"]
tls = ["areq/tls"]

[dependencies]
areq = { workspace = true, features = ["rtn"] }
async-net.workspace = true
futures-lite = { workspace = true, features = ["std"] }
url.workspace = true

[dev-dependencies]
async-executor.workspace = true

[lints]
workspace = true
