[package]
name = "areq-smol"
description = "Async HTTP requests for smol runtime"
documentation = "https://docs.rs/areq-smol"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
http1 = ["areq/http1"]
http2 = ["areq/http2"]
tls = ["areq/tls"]

[dependencies]
areq = { workspace = true, features = ["rtn"] }
async-net.workspace = true
futures-lite = { workspace = true, features = ["std"] }
url.workspace = true

[dev-dependencies]
areq = { workspace = true, features = ["http1", "rtn"] }
async-executor.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
