[package]
name = "areq-tokio"
description = "Async HTTP requests for tokio runtime"
documentation = "https://docs.rs/areq-tokio"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
http1 = ["areq/http1"]
http2 = ["areq/http2"]
tls = ["areq/tls"]

[dependencies]
areq = { workspace = true, features = ["rtn"] }
futures-lite = { workspace = true, features = ["std"] }
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["net"] }
url.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
