[package]
name = "areq"
description = "Async runtime independent HTTP requests"
documentation = "https://docs.rs/areq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
areq-body.workspace = true
areq-h1.workspace = true
bytes.workspace = true
futures-lite.workspace = true
futures-rustls.workspace = true
h2 = "0.4"
http.workspace = true
pin-project-lite.workspace = true
tokio = "1"
url.workspace = true

[lints]
workspace = true
