[package]
name = "areq"
description = "Async runtime-independent HTTP requests"
documentation = "https://docs.rs/areq"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
http1 = ["areq-h1"]
http2 = ["h2", "tokio"]
tls = ["futures-rustls", "rustls-pemfile"]
rtn = ["areq-body/rtn"]

[dependencies]
areq-body.workspace = true
areq-h1 = { workspace = true, optional = true }
bytes.workspace = true
futures-lite = { workspace = true, features = ["std"] }
futures-rustls = { workspace = true, optional = true }
h2 = { workspace = true, optional = true }
http.workspace = true
pin-project-lite.workspace = true
rustls-pemfile = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url.workspace = true

[lints]
workspace = true
