[package]
name = "compress"
description = "Async compression crate"
# documentation = "https://docs.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
flate2.workspace = true
memchr.workspace = true

[lints]
workspace = true
