[package]
name = "serve"
version = "0.0.0"
edition.workspace = true

[dependencies]
areq.workspace = true
bytes.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
futures-rustls.workspace = true
http-body-util = "0.1.2"
hyper = { version = "1.5", features = ["http1", "http2", "server"] }
rustls-pemfile.workspace = true
smol = "2.0.2"
smol-hyper = "0.1"
tower = { version = "0.5", features = ["util"] }

[dependencies.axum]
version = "0.8"
default-features = false
features = ["http1"]

[lints]
workspace = true
