[package]
name = "serve"
version = "0.0.0"
edition.workspace = true

[dependencies]
areq.workspace = true
axum = { workspace = true, features = ["http1"] }
bytes.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
futures-rustls.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2", "server"] }
rustls-pemfile.workspace = true
smol.workspace = true
smol-hyper.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
